--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -12,8 +12,8 @@
 
   <!-- scm configuration is require to extract the github hash-->
   <scm>
-    <connection>scm:git://github.com/skyluc/scala-ide.git</connection>
-    <url>https://github.com/skyluc/scala-ide</url>
+    <connection>scm:git://github.com/scala-ide/scala-ide.git</connection>
+    <url>https://github.com/scala-ide/scala-ide</url>
   </scm>
 
   <modules>
@@ -32,7 +32,7 @@
 
   <repositories>
     <repository>
-      <id>eclipse</id>
+      <id>eclipse.${eclipse.codename}</id>
       <name>Eclipse p2 repository</name>
       <layout>p2</layout>
       <url>${repo.eclipse}</url>
@@ -41,7 +41,7 @@
       </snapshots>
     </repository>
     <repository>
-      <id>ajdt</id>
+      <id>ajdt.${eclipse.codename}</id>
       <name>AJDT for Eclipse p2 repository</name>
       <layout>p2</layout>
       <url>${repo.ajdt}</url>
@@ -66,153 +66,21 @@
   <dependencies>
     <!-- because the Scala plugins were build locally in build-toolchain, and
          are only available in the local maven repository, we need to reference
-         then as maven dependencies
-         The transitive dependencies are excluded. They don't get correctly configured,
-         the default version (2.9.x) get pulled -->
+         then as maven dependencies -->
     <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.scala.library</artifactId>
       <version>${project.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-library</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-swing</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-dbc</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.scala.compiler</artifactId>
       <version>${project.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-lang</groupId>
-          <artifactId>scala-compiler</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.sbt.full.library</artifactId>
       <version>${project.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>actions_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>api_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>cache_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>classfile_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>classpath_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>collections_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>compile_2.9.1</artifactId>
-        </exclusion>
-         <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>control_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>incremental-compiler_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>io_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>ivy_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>launcher-interface_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>logging_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>main_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>persist_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>process_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>run_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>tasks_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>task-system_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>sbt_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>completion_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>launcher_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>precompiled-2.9.1-2_9_1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbt</groupId>
-          <artifactId>interface_2.9.1</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>jline</groupId>
-          <artifactId>jline</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.ivy</groupId>
-          <artifactId>ivy</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.scala-tools.sbinary</groupId>
-          <artifactId>sbinary_2.9.1</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
   </dependencies>
 
@@ -233,7 +101,6 @@
         <configuration>
           <resolver>p2</resolver>
           <pomDependencies>consider</pomDependencies>
-          <allowConflictingDependencies>true</allowConflictingDependencies>
         </configuration>
       </plugin>
       <plugin>
