Correctly copy the scala-reflect.jar for 2.10, in addition to the usual jars.

--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -48,7 +48,7 @@
             <executions>
               <execution>
                 <!-- add the source jar, to be able to attach the source to the Scala container. And the continuation plug-in -->
-                <id>copy</id>
+                <id>copy.reflect</id>
                 <phase>compile</phase>
                 <goals>
                   <goal>copy</goal>
