Add configuration for editor 'surround selection' feature.
Each character can be individually enabled. By default they are off.

Fixes #1001034

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -94,6 +94,12 @@
             class="scala.tools.eclipse.logging.ui.properties.LoggingPreferencePage"
             id="org.scala-ide.sdt.core.properties.Logging"
             name="Logging">
+      </page>
+      <page
+            category="org.scala-ide.sdt.core.preferences"
+            class="scala.tools.eclipse.properties.EditorPreferencePage"
+            id="org.scala-ide.sdt.core.editor"
+            name="Editor">
       </page>      
    </extension>
 
