--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -204,7 +204,7 @@
               <frameworkExtension>
                 <groupId>p2.osgi.bundle</groupId>
                 <artifactId>org.eclipse.equinox.weaving.hook</artifactId>
-                <version>1.0.200.I20120427-0800</version>
+                <version>1.0.200.v20120524-1707</version>          
               </frameworkExtension>
             </frameworkExtensions>
             <bundleStartLevel>
