--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <tycho.plugin.version>0.15.0</tycho.plugin.version>
     <scala.plugin.version>3.0.2</scala.plugin.version>
     <aspectj.plugin.version>1.4</aspectj.plugin.version>
+    <weaving.hook.plugin.version>1.0.200.v20120524-1707</weaving.hook.plugin.version>
     <maven-bunble.plugin.version>2.3.7</maven-bunble.plugin.version>
     <properties-maven.plugin.version>1.1.10</properties-maven.plugin.version>
     <buildnumber-maven.plugin.version>1.1</buildnumber-maven.plugin.version>
