Revert sbt.full.library maven config logic
The base logic is as it was before the maven refactoring.
It uses the base folder as a work folder.
The other parts of the clean up remain.

Fix #1001086

--- a/org.scala-ide.sbt.full.library/.classpath
+++ b/org.scala-ide.sbt.full.library/.classpath
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/scala-2.9/lib/compiler-interface.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/actions_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/api_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/cache_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/classfile_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/classpath_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/collections_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/compile_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/completion_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/control_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/incremental-compiler_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/interface_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/io_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/ivy_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/ivy.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/jline.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/launcher_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/launcher-interface_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/logging_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/main_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/persist_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/precompiled-2.9.1-2_9_1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/process_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/run_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/sbinary_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/sbt_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/task-system_2.9.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="target/classes/lib/tasks_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/actions_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/api_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cache_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/classfile_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/classpath_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/collections_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/compile_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/completion_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/control_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/incremental-compiler_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/interface_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/io_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ivy_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ivy.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jline.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/launcher_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/launcher-interface_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/logging_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/main_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/persist_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/precompiled-2.9.1-2_9_1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/process_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/run_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sbinary_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sbt_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/task-system_2.9.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tasks_2.9.1.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
