Scala debugger working without JDT debugger
Reworked the Scala debugger so it doesn't use the JDT debugger to
communicate with the VM.
A new launch delegate is added to the Scala application launch configuration type.
It creates a ScalaDebugTarget from the JDI connection to the vm.
Added a breakpoint manager, to create and delete the JDI requests needed.
Added a JDI event dispatcher, to pull the events from the JDI event queue and forwarding
them to the interested parties.
The management of the events is base on Scala actors.

--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -36,4 +36,17 @@
             modelIdentifier="org.scala-ide.sdt.debug">
       </logicalStructureProvider>
    </extension>
+   <extension
+         point="org.eclipse.debug.core.launchDelegates">
+      <launchDelegate
+            delegate="scala.tools.eclipse.launching.ScalaApplicationLaunchConfigurationDelegate"
+            delegateDescription="The Scala JVM Launcher supports debugging of local Scala using the new Scala debugger"
+            id="scala.application.new"
+            modes="debug"
+            name="Scala Application (new debugger)"
+            sourceLocatorId="org.eclipse.jdt.launching.sourceLocator.JavaSourceLookupDirector"
+            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
+            type="scala.application">
+      </launchDelegate>
+    </extension>
 </plugin>
