--- a/org.scala-ide.sdt.debug/plugin.xml
+++ b/org.scala-ide.sdt.debug/plugin.xml
@@ -2,21 +2,6 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            category="org.scala-ide.sdt.core.preferences"
-            class="scala.tools.eclipse.debug.DebugPreferencePage"
-            id="org.scala-ide.sdt.debug.preferences"
-            name="Debug">
-      </page>
-   </extension>
-   <extension
-         point="org.eclipse.core.runtime.preferences">
-      <initializer
-            class="scala.tools.eclipse.debug.DebugPreferenceInitializer">
-      </initializer>
-   </extension>
-   <extension
          point="org.eclipse.debug.ui.debugModelPresentations">
       <debugModelPresentation
             class="scala.tools.eclipse.debug.model.ScalaDebugModelPresentation"
@@ -36,4 +21,17 @@
             modelIdentifier="org.scala-ide.sdt.debug">
       </logicalStructureProvider>
    </extension>
+   <extension
+         point="org.eclipse.debug.core.launchDelegates">
+      <launchDelegate
+            delegate="scala.tools.eclipse.launching.ScalaApplicationLaunchConfigurationDelegate"
+            delegateDescription="The Scala JVM Launcher supports debugging of local Scala using the new Scala debugger"
+            id="scala.application.new"
+            modes="debug"
+            name="Scala Application (new debugger)"
+            sourceLocatorId="org.eclipse.jdt.launching.sourceLocator.JavaSourceLookupDirector"
+            sourcePathComputerId="org.eclipse.jdt.launching.sourceLookup.javaSourcePathComputer"
+            type="scala.application">
+      </launchDelegate>
+    </extension>
 </plugin>
